fixed width issue on mobile

--- a/src/app/animal/animal.component.scss
+++ b/src/app/animal/animal.component.scss
@@ -10,6 +10,7 @@
       background-color: rgba($primary, 0.85);
       box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
       height: 80vh;
+      max-width: 95vw;
       display: grid;
       justify-content: center;
       .details {
